--- a/RTLS.Domins/RTLS.Domins.csproj
+++ b/RTLS.Domins/RTLS.Domins.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Device.cs" />
     <Compile Include="DeviceAssociateSite.cs" />
     <Compile Include="Enums\CutomEnum.cs" />
+    <Compile Include="FilterLocationData.cs" />
     <Compile Include="Identity\A8AdminDbContext.cs" />
     <Compile Include="Identity\AccountBindingModels.cs" />
     <Compile Include="Identity\AccountViewModels.cs" />
