--- a/RTLS.Domins/RTLS.Domins.csproj
+++ b/RTLS.Domins/RTLS.Domins.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Device.cs" />
     <Compile Include="DeviceAssociateSite.cs" />
     <Compile Include="Enums\CutomEnum.cs" />
+    <Compile Include="Enums\DeviceRegisteredInEngine.cs" />
     <Compile Include="Enums\RtlsEngine.cs" />
     <Compile Include="Identity\A8AdminDbContext.cs" />
     <Compile Include="Identity\AccountBindingModels.cs" />
